--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "staking"
+    "url": "cross-chain-bridge"
   },
   "keywords": [
     "solidity",
